.gitignore: Added br-pbuilder build objects that do not need to be comitted to the remote repository.
Signed-off-by: Nolan Davenport <nolanrdavenport@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 *.un~
 *.[oa]
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+br-pbuilder
+compile
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
+src/.deps/
+src/Makefile
+src/Makefile.in
+src/pbuilder
