--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,6 @@ AM_CPPFLAGS = $(PBUILDER_CFLAGS)
 
 bin_PROGRAMS = pbuilder
 
-pbuilder_SOURCES = utils.c graph_create.c graph_exec.c main.c
+pbuilder_SOURCES = utils.c graph_common.c graph_create.c graph_exec.c main.c
 pbuilder_LDADD = $(PBUILDER_LIBS)
 
